--- a/src/main/java/config.properties
+++ b/src/main/java/config.properties
@@ -1,2 +1,8 @@
-host=127.0.0.1
+#10.32.13.66 local ip
+#10.220.12.58
+#127.0.0.1
+host=10.32.13.66
 port=3456
+
+#the number of connections connected to provider
+connCount=3
